// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Route matches snapshot with default props 1`] = `
<RouteComponent
  component={[Function]}
  exact={false}
  isAccessAllowed={false}
  path="/"
  redirectTo="/"
/>
`;

exports[`Route matches snapshot with privateRoute 1`] = `
<RouteComponent
  component={[Function]}
  exact={false}
  isAccessAllowed={true}
  path="/"
  redirectTo="/login"
/>
`;
